--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+# npm
 node_modules/
+temp/
+upload/
+package-lock.json
+*.log
+*.gz
+#vscode
+.vscode
