--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "express-session": "^1.17.0",
     "faker": "^4.1.0",
     "imgur-node-api": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.18.1",
     "sequelize": "^5.21.4",
